--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,16 +19,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  hydrated_bloc: ^0.4.0
   flutter_bloc: ^0.21.0
   equatable: ^0.5.1
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  json_annotation: ^3.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner:
+  json_serializable: ^3.2.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
